[project]
name = "rawlog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.6",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.4",
    "sqlalchemy>=2.0.46",
    "ty>=0.0.15",
    "uvicorn>=0.40.0",
]
